# CRA-Core

./: .gitignore  AGENTS.md  BRANCH_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_JOURNAL.md  DEV_STATUS.md  HARDWARE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  RUST_BRANCH_IMPLEMENTATION.md  RUST_REFACTOR_PROMPT.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tesseract-4d.html  tesseract-vib3.html  tsconfig.base.json  vib3-tesseract-demo.html
.claude/commands/: architecture.md  hash-pattern.md
.github/workflows/: cra-comparative-test.yml
atlas/reference/: README.md  atlas.json
atlases/: cra-agent-integration.json  cra-bootstrap.json  cra-development-v3.json  cra-development.json  vib3-webpage-development.json
atlases/github-ops/: atlas.json
cra/: __init__.py  version.py
cra-core/: Cargo.toml
cra-core/benches/: resolver_bench.rs
cra-core/crates/cra-crypto/: Cargo.toml
cra-core/crates/cra-crypto/src/: chain.rs  hash.rs  lib.rs
cra-core/crates/cra-protocol/: Cargo.toml
cra-core/crates/cra-protocol/src/: carp.rs  lib.rs  trace.rs
cra-core/src/: error.rs  lib.rs
cra-core/src/atlas/: loader.rs  manifest.rs  mod.rs  steward.rs  validator.rs
cra-core/src/cache/: context_cache.rs  mod.rs  policy_cache.rs
cra-core/src/carp/: checkpoint.rs  mod.rs  policy.rs  request.rs  resolution.rs  resolver.rs
cra-core/src/context/: matcher.rs  mod.rs  registry.rs
cra-core/src/ffi/: mod.rs
cra-core/src/runtime/: mod.rs
cra-core/src/storage/: mod.rs
cra-core/src/timing/: manager.rs  mod.rs
cra-core/src/timing/backends/: mock.rs  mod.rs  std_backend.rs
cra-core/src/trace/: buffer.rs  chain.rs  collector.rs  event.rs  mod.rs  processor.rs  queue.rs  raw.rs  replay.rs
cra-core/tests/: conformance.rs  context_demo.rs  cra_comparative_test.rs  integration_flow.rs  self_governance.rs  vib3_context_demo.rs  vib3_detailed_execution.rs
cra-mcp/: Cargo.toml
cra-mcp/context/: about.md  examples.md  quick-start.md  rules.md
cra-mcp/src/: bootstrap.rs  context.rs  error.rs  lib.rs  main.rs  server.rs  session.rs  tools.rs
cra-mcp/src/resources/: mod.rs
cra-mcp/src/tools/: action.rs  context.rs  feedback.rs  mod.rs  session.rs
cra-mcp/tests/: bootstrap_tests.rs  session_tests.rs
cra-node/: Cargo.toml
cra-node/src/: lib.rs
cra-proxy/: Cargo.toml
cra-proxy/src/: lib.rs  main.rs  policy.rs  proxy.rs
cra-python/: Cargo.toml
cra-python/src/: lib.rs
cra-server/: Cargo.toml
cra-server/src/: config.rs  lib.rs  main.rs
cra-server/src/routes/: mod.rs  resolve.rs  sessions.rs  traces.rs
cra-wasm/: Cargo.toml
cra-wasm/src/: lib.rs
cra-wrapper/: Cargo.toml
cra-wrapper/src/: cache.rs  client.rs  config.rs  error.rs  hooks.rs  lib.rs  queue.rs  transport.rs
cra-wrapper/tests/: cache_tests.rs  client_tests.rs  queue_tests.rs  wrapper_tests.rs
cra/adapters/: __init__.py  anthropic.py  base.py  google_adk.py  mcp.py  openai.py
cra/auth/: __init__.py  api_key.py  jwt.py  middleware.py  rbac.py
cra/cli/: __init__.py  config.py  main.py
cra/config/: __init__.py  settings.py
cra/core/: __init__.py  action.py  atlas.py  carp.py  policy.py  replay.py  session.py  trace.py  validation.py
cra/middleware/: __init__.py  base.py  langchain.py  openai.py
cra/observability/: __init__.py  otel.py  siem.py
cra/runtime/: __init__.py  server.py
cra/schemas/: __init__.py
cra/templates/: __init__.py  base.py  crewai.py  langchain.py  openai_gpt.py
cspm-core/: Cargo.toml
cspm-core/benches/: voronoi_lookup.rs
cspm-core/examples/: basic_transmission.rs  channel_validation.rs
cspm-core/src/: channel.rs  codec.rs  error.rs  lattice.rs  lib.rs  quaternion.rs  spinor.rs
cspm-core/src/crypto/: mod.rs
cspm-core/src/equalization/: adaptive.rs  cma.rs  estimator.rs  mod.rs  pilot.rs
cspm-core/src/geometry/: fractal.rs  hyperbolic.rs  mod.rs  polychora.rs  traits.rs
cspm-core/src/hardware/: mod.rs  receiver.rs  slm.rs  traits.rs
cspm-core/src/modulation/: decoder.rs  encoder.rs  mod.rs  optical.rs
cspm-core/src/performance/: batch.rs  mod.rs  simd.rs
cspm-core/src/polytope/: gray_code.rs  mod.rs  vertices.rs  voronoi.rs
cspm-core/src/quaternion/: mod.rs
cspm-core/src/simulation/: baseline.rs  fiber.rs  freespace.rs  hardware.rs  mod.rs  monte_carlo.rs  oam.rs
cspm-core/src/sync/: checkpoint.rs  framing.rs  mod.rs  preamble.rs  recovery.rs
cspm-core/src/trace_integration/: mod.rs
docs/: AGENT_FIRST_DESIGN.md  API.md  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  ATLASES.md  ATLAS_FORMAT_v0_1.md  BRANCH_ANALYSIS.md  BRANCH_COLLABORATION_PROMPT.md  CARP_1_0.md  CLI.md  CLI_TELEMETRY_REQUIREMENTS_v0_1.md  CONFORMANCE_TESTS.md  CONTEXT_SYSTEM_DESIGN.md  CRA-AGENT-MD-GENERATION.md  CRA-ARCHITECTURE-SIMPLIFIED.md  CRA-ATLAS-SCHEMA-V2.md  CRA-AUTHENTICATION.md  CRA-BOOTSTRAP-PROTOCOL.md  CRA-CHECKPOINT-SYSTEM.md  CRA-COMPLETE-SYSTEM-DESIGN.md  CRA-COMPLETION-ANALYSIS.md  CRA-DEV-2025-12-30.md  CRA-DEV-PLAN.md  CRA-ECOSYSTEM.md  CRA-ELEVATOR-PITCH.md  CRA-INTERACTIVE-ONBOARDING.md  CRA-MANIFEST-2025-12-30.md  CRA-MASTER-PLAN.md  CRA-MCP-HELP-SYSTEM.md  CRA-PITCH.md  CRA-STEWARD-CONFIG.md  CRA-TRACE-ASYNC.md  CRA-TRACE-EVENTS.md  CRA-WRAPPER-PROTOCOL.md  CRA-WRAPPER-SYSTEM.md  CRA_LANDSCAPE_ANALYSIS.md  CRA_QUICK_OVERVIEW.md  CRA_TESTING_PLAN.md  CSPM_PHYSICAL_LAYER.md  DEFERRED_TRACING_TRADEOFFS.md  (+37 more)
docs/specs/: CARP_SPEC.md  TRACE_SPEC.md
examples/: http_server.rs
examples/minoots-integration/: Dockerfile.cra-mcp  Dockerfile.cra-proxy  Dockerfile.cra-server  README.md  demo.sh  docker-compose.yml
experiments/: dogfood_context.md  dogfood_task.md
github-test-design/: TASK.md  run-test.sh
github-test-design/with-cra/: CLAUDE.md  claude.json
github-test-design/without-cra/: claude.json
scripts/: analyze_tests.sh
specs/: CSPM_1_0.md  HEXACOSICHORON.md  PROTOCOL.md  SPINOR_MODULATION.md  TRACE_PHYSICAL_LAYER.md  VALIDATION_REPORT.md  openapi.yaml
templates/: CRA_STARTER_PROMPT.md  agents.md
test-output/: no-cra-output.html  with-cra-output.html
tests/: __init__.py  conftest.py
(+90 files in other folders)
