[workspace]
resolver = "2"
members = [
    "cra-core",
    "cra-server",
    "cra-proxy",
    "cra-mcp",
    "cra-python",
    "cra-node",
    "cra-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CRA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/CRA-Core/cra-rust"
description = "Context Registry Agents - Governance layer for AI agents"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
glob = "0.3"
jsonschema = "0.18"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# FFI
libc = "0.2"

# Testing
criterion = "0.5"
