[package]
name = "cra-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CRA Core - Context Registry Agents core library"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi"]
ffi = []
conformance = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
regex.workspace = true
glob.workspace = true
jsonschema.workspace = true
libc.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "resolver_bench"
harness = false
