[package]
name = "cra-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CRA Core - Context Registry Agents core library"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi", "cli"]
ffi = []
cli = ["clap"]
conformance = []
async-runtime = ["tokio", "async-trait", "parking_lot", "num_cpus"]
minoots = []  # Enable minoots timer backend integration

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
regex.workspace = true
glob.workspace = true
jsonschema.workspace = true
libc.workspace = true
crossbeam.workspace = true

# Async runtime (optional)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
parking_lot = { version = "0.12", optional = true }
num_cpus = { version = "1.16", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "resolver_bench"
harness = false

[[bin]]
name = "cra-context"
path = "src/bin/cra_context.rs"

[dependencies.clap]
workspace = true
optional = true
