[package]
name = "cra-mcp"
version = "0.1.0"
edition = "2021"
description = "CRA MCP Server - Model Context Protocol bridge for Context Registry for Agents"
license = "MIT"
repository = "https://github.com/Domusgpt/CRA-Core"
keywords = ["cra", "mcp", "agents", "governance", "audit"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "cra-mcp-server"
path = "src/main.rs"

[lib]
name = "cra_mcp"
path = "src/lib.rs"

[dependencies]
cra-core = { path = "../cra-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
