[package]
name = "cra-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CRA Webhook Proxy - Layer 3 enforcement gateway"

[[bin]]
name = "cra-proxy"
path = "src/main.rs"

[lib]
name = "cra_proxy"
path = "src/lib.rs"

[dependencies]
cra-core = { path = "../cra-core" }
axum = "0.7"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
bytes = "1.0"
http = "1.0"

[features]
default = []
