[package]
name = "cra-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CRA Core WebAssembly bindings via wasm-bindgen"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cra-core = { path = "../cra-core", default-features = false }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde.workspace = true
serde_json.workspace = true
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
