[package]
name = "cra-wrapper"
version = "0.1.0"
edition = "2021"
description = "CRA Wrapper - Agent-side component for CRA governance"
license = "MIT"
repository = "https://github.com/Domusgpt/CRA-Core"
keywords = ["cra", "wrapper", "agents", "governance"]

[lib]
name = "cra_wrapper"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
