[package]
name = "cspm-core"
version = "0.1.0"
edition = "2021"
description = "Cryptographically-Seeded Polytopal Modulation - Physical Layer Optical Protocol"
license = "MIT"
repository = "https://github.com/Domusgpt/CRA-Core"

[dependencies]
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lattice_bench"
harness = false
