[package]
name = "cspm-core"
version = "0.1.0"
edition = "2021"
authors = ["CRA Team"]
description = "Cryptographically-Seeded Polytopal Modulation for optical networks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Domusgpt/CRA-Core"
keywords = ["optical", "modulation", "quaternion", "600-cell", "cryptography"]
categories = ["science", "cryptography"]

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "voronoi_lookup"
harness = false

[features]
default = []
simd = []  # Future SIMD optimizations
